tests/paczka1/small_fuzzy/41753894.err
Error in line 2: CVusJuhS S898 726,2
Error in line 1: INg7xc59r9 S898 79,1
Error in line 5: duWt3 A831 61,6
Error in line 3: CVusJuhS A831 8,9
Error in line 8: CVusJuhS S898 69,2
Error in line 9: CVusJuhS A269 88,7
